<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uz.itex.firstmedicalaid.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_data"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="228dp"
        tools:text="@string/sex"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="279dp"
        tools:text="@string/select_image"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="163dp"
        tools:text="@string/birth_date"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="199dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="149dp"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp"
        tools:text="@string/full_name"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="199dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="78dp"
        tools:ignore="LabelFor,MissingConstraints" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textOff="@string/female"
        android:textOn="@string/male"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="228dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="104dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/user_default_image"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="311dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="445dp"
        tools:ignore="MissingConstraints" />

</LinearLayout>
